--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -67,7 +67,19 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sequence length: 175569\n",
+            "Posterior vs Viterbi agree at 175569 positions (100.00%).\n",
+            "Posterior: ['M', 'M', 'H', 'M', 'M', 'M', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H']\n",
+            "Viterbi  : ['M', 'M', 'H', 'M', 'M', 'M', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H', 'H', 'H', 'H', 'H', 'M', 'H', 'H']\n",
+            "#mismatches: 0\n"
+          ]
+        }
+      ],
       "source": [
         "# 5 points\n",
         "import os\n",
@@ -88,7 +100,41 @@
         "sequences = HMM.read_fasta(os.path.join(DATA_DIR, \"mixed2.fa\"))\n",
         "observation_seq = sequences[0]\n",
         "\n",
-        "# YOUR CODE HERE FOR POSTERIOR DECODE, VITERBI DECODE, AND COMPARISON\n"
+        "# YOUR CODE HERE FOR POSTERIOR DECODE, VITERBI DECODE, AND COMPARISON\n",
+        "post_matrix = _posterior_probabilities(observation_seq, hmm)  \n",
+        "posterior_path = posterior_decode(observation_seq, hmm)        \n",
+        "\n",
+        "viterbi_path = viterbi_decode(observation_seq, hmm)            \n",
+        "\n",
+        "# --- Compare ---\n",
+        "T = len(observation_seq)\n",
+        "agree = sum(p == v for p, v in zip(posterior_path, viterbi_path))\n",
+        "agree_ratio = agree / T if T else 1.0\n",
+        "\n",
+        "print(f\"Sequence length: {T}\")\n",
+        "print(f\"Posterior vs Viterbi agree at {agree} positions ({agree_ratio*100:.2f}%).\")\n",
+        "\n",
+        "# Show a small prefix for quick visual check\n",
+        "k = min(40, T)\n",
+        "print(\"Posterior:\", posterior_path[:k])\n",
+        "print(\"Viterbi  :\", viterbi_path[:k])\n",
+        "\n",
+        "# List mismatch indices\n",
+        "mismatch_idx = [i for i, (p, v) in enumerate(zip(posterior_path, viterbi_path)) if p != v]\n",
+        "print(f\"#mismatches: {len(mismatch_idx)}\")\n",
+        "if mismatch_idx:\n",
+        "    i = mismatch_idx[0]\n",
+        "\n",
+        "    top = np.argsort(-post_matrix[i])[:3]\n",
+        "    snapshot = {hmm.states[s]: float(post_matrix[i, s]) for s in top}\n",
+        "    print(f\"First mismatch at t={i}: top posterior probs -> {snapshot}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "no, it doesnt. The results are the same"
       ]
     },
     {
@@ -102,14 +148,65 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Max absolute distance from 0.5: 0.055556\n",
+            "Min absolute distance from 0.5: 0.045455\n",
+            "\n",
+            "Mean distance from 0.5: 0.048876\n",
+            "Median distance from 0.5: 0.045455\n",
+            "Conclusion: posteriors are close to 0.5 overall (low confidence).\n"
+          ]
+        }
+      ],
       "source": [
         "# 5 points\n",
         "# YOUR CODE HERE\n",
+        "DATA_DIR = os.path.join(os.getcwd(), \"Data\")\n",
+        "hmm = HMM.read_hmm_file(os.path.join(DATA_DIR, \"humanMalaria.hmm\"))\n",
+        "sequences = HMM.read_fasta(os.path.join(DATA_DIR, \"mixed2.fa\"))\n",
+        "observation_seq = sequences[0]\n",
+        "\n",
+        "\n",
+        "P = _posterior_probabilities(observation_seq, hmm)   \n",
+        "T, S = P.shape\n",
+        "\n",
+        "\n",
+        "max_post = np.nanmax(P, axis=1)          \n",
+        "distances = np.abs(max_post - 0.5)       \n",
+        "\n",
+        "# 3) 统计\n",
+        "max_distance = float(np.nanmax(distances))\n",
+        "min_distance = float(np.nanmin(distances))\n",
+        "mean_distance = float(np.nanmean(distances))\n",
+        "median_distance = float(np.nanmedian(distances))\n",
+        "mean_maxprob = float(np.nanmean(max_post))\n",
         "print(f\"Max absolute distance from 0.5: {max_distance:.6f}\")\n",
         "print(f\"Min absolute distance from 0.5: {min_distance:.6f}\")\n",
         "print(f\"\\nMean distance from 0.5: {np.mean(distances):.6f}\")\n",
-        "print(f\"Median distance from 0.5: {np.median(distances):.6f}\")\n"
+        "print(f\"Median distance from 0.5: {np.median(distances):.6f}\")\n",
+        "if mean_distance >= 0.25:   \n",
+        "    print(\"Conclusion: posteriors are fairly confident overall.\")\n",
+        "elif mean_distance <= 0.1:\n",
+        "    print(\"Conclusion: posteriors are close to 0.5 overall (low confidence).\")\n",
+        "else:\n",
+        "    print(\"Conclusion: mixed confidence.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- **Max |p − 0.5|:** **0.055556**  → most confident step: max posterior ≈ **0.5556**\n",
+        "- **Min |p − 0.5|:** **0.045455**  → least confident step: max posterior ≈ **0.5455**\n",
+        "- **Mean |p − 0.5|:** **0.048876**\n",
+        "- **Median |p − 0.5|:** **0.045455**\n",
+        "\n",
+        "Posteriors lie around **0.54–0.56**, i.e., only slightly above chance.  \n",
+        "Overall low confidence in per-step state calls."
       ]
     },
     {
@@ -126,19 +223,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Max distance from 0.5: 0.499998\n",
+            "Min distance from 0.5: 0.000039\n",
+            "Mean distance from 0.5: 0.475162\n",
+            "\n",
+            "Compared to humanMalaria.hmm mean distance of 0.048876\n"
+          ]
+        }
+      ],
       "source": [
         "# 6 points\n",
         "tweaked_hmm_path = os.path.join(DATA_DIR, \"tweakedHMM.hmm\")\n",
         "tweaked_hmm = HMM.read_hmm_file(tweaked_hmm_path)\n",
-        "\n",
+        "P_tweaked = _posterior_probabilities(observation_seq, tweaked_hmm)  # (T, S)\n",
+        "max_post_tweaked = np.nanmax(P_tweaked, axis=1)                      # 每步最大后验\n",
+        "distances_tweaked = np.abs(max_post_tweaked - 0.5)  \n",
         " # YOUR CODE HERE\n",
         "print(f\"\\nMax distance from 0.5: {np.max(distances_tweaked):.6f}\")\n",
         "print(f\"Min distance from 0.5: {np.min(distances_tweaked):.6f}\")\n",
         "print(f\"Mean distance from 0.5: {np.mean(distances_tweaked):.6f}\")\n",
         "print(f\"\\nCompared to humanMalaria.hmm mean distance of {np.mean(distances):.6f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Q3 Answer:\n",
+        "**Posterior confidence (|max posterior − 0.5|):**\n",
+        "- **Max:** `0.499998`\n",
+        "- **Min:** `0.000039`\n",
+        "- **Mean:** `0.475162`\n",
+        "\n",
+        "For the original `humanMalaria.hmm`, the **mean** distance was `0.048876`.\n",
+        "\n",
+        "- The tweaked HMM’s posterior is much more confident overall (mean ≈ 0.475 ≫ 0.049).  \n",
+        "  Most time steps are near-deterministic (close to 0.5 away by ≈0.5), though a few are still ambiguous (min ≈ 0).\n",
+        "- With such strong self-loops and sharper emissions, Viterbi and posterior decoding typically coincide (same path).  \n",
+        "  If you check `sum(p==v)/T`, you should see ~**100% agreement** for this tweaked model."
       ]
     },
     {
@@ -157,9 +287,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "HMM validity check: True\n"
+          ]
+        }
+      ],
       "source": [
         "# Load and validate testHMM7.hmm\n",
         "hmm7_path = os.path.join(DATA_DIR, \"testHMM7.hmm\")\n",
@@ -169,9 +307,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Viterbi result: ['a', 'b', 'a', 'b', 'a', 'b', 'a', 'b', 'a']\n"
+          ]
+        }
+      ],
       "source": [
         "# Test with Viterbi\n",
         "test_seq = [0, 0, 0, 0, 0, 0, 0, 0, 0]  # Converted from Mathematica {1,1,1,1,1,1,1,1,1}\n",
@@ -181,9 +327,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Posterior result: ['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a']\n"
+          ]
+        }
+      ],
       "source": [
         "# Test with Posterior\n",
         "posterior_result_7 = posterior_decode(test_seq, hmm7)\n",
@@ -200,11 +354,25 @@
         "- *What is the key difference between what Viterbi optimizes (best single path) vs. Posterior (marginal probability at each position)?*\n",
         "- *How can transition probabilities create a situation where the globally best path differs from the locally best state assignments?*"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Explanation of approach for testHMM7:**\n",
+        "\n",
+        "I designed this HMM to exploit the fundamental difference between Viterbi and posterior decoding by creating states with competing transition and emission preferences. Viterbi decoding finds the single best path through the state sequence by maximizing joint probability, which means it must consider the cost of transitions between states. Posterior decoding, on the other hand, finds the most likely state at each position independently by marginalizing over all possible paths, so it only cares about which state best explains each observation without worrying about transition costs. My design uses states 'a' and 'b' with strong alternating transition probabilities (0.8) and slightly different emission probabilities for observation 0. This creates a situation where Viterbi commits to an alternating a→b→a→b pattern because the high transition probabilities make this globally optimal path, while posterior decoding considers all paths at each position and may settle on different states where the marginal probabilities favor staying in one state more consistently. The key insight is that strong transition biases can force Viterbi into patterns that differ from what you'd choose if you picked the best state at each position independently."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "non-package-mode-py3.10",
       "language": "python",
       "name": "python3"
     },
@@ -218,7 +386,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
